[project]
name = "cl-asset-pricing-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "numpy>=2.2.4",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "ruff>=0.11.5",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "wandb>=0.19.9",
]
